<resources>
  <string name="app_name">Climb</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_main">Your Gym</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="init_time">00:00</string>
  <string name="end">END SESSION</string>
  <string name="add_new_gym">Add new gym</string>
  <string name="gyms">Gyms</string>
  <string name="search_hint">Search Your Gym</string>
  <string name="ok">OK</string>
  <string name="drawer_icon">drawer icon</string>
  <string name="no_fit_permission_msg">We store your data in Google Fit, but we need your permission!</string>
  <string name="ask_again">ASK AGAIN</string>
  <string name="change_accounts">Change Accounts</string>
  <string name="ignore_end_session_error">End Without Saving</string>
  <string name="empty_session_message">You didn\'t add any routes to this session. No session will be saved</string>
  <string name="cancel">Cancel</string>
  <string name="end_empty_session">End Anyways</string>
  <string name="instructions">swipe left to view the gym map</string>
  <string name="card_menu_delete">Delete</string>
  <string name="delete_session_message">This session will be removed from your timeline.</string>
  <string name="delete_session_title">Delete Session?</string>
  <string name="no_sessions_subtitle">Click the timer button to start your first session.</string>
  <string name="no_sessons_title">No Sessions Yet</string>
  <string name="notification_title">Climb</string>
  <string name="notification_text">Session In Progress</string>
  <string name="service_name">notification_listener</string>
  <string name="select_gym_instructions_title">No Gym Selected</string>
  <string name="select_gym_instructions_subtitle">Use the search bar above to find your gym.</string>
  <string name="app_bar_image_description">Your current gym image</string>
  <string name="send_feedback">Send Feedback</string>
  <string name="help">Help</string>
  <string name="session_detail_icon_description">session detail icon</string>
  <string name="active_time_label">Active Time</string>
  <string name="problems_sent_label">Problems Sent</string>
  <string name="calories_burned_label">Calories Burned</string>
  <string name="edit_item_title">Edit</string>
  <string name="no_gyms_found_subtitle">Check your internet connection or try again later.</string>
  <string name="no_gyms_found_title">Couldn\'t Connect to our Gym Database</string>
  <string name="session_save_failure">Failed to store your session in Google Fit</string>
  <string name="retry">Retry</string>
  <string name="not_signed_in_title">You\'re Not Signed In</string>
  <string name="not_signed_in_subtitle">You must be signed in to start a session.</string>
  <string name="sign_in">Sign In</string>
  <string name="save">save</string>
  <string name="no_session_details">No Session Details</string>
  <string name="small_gym_icon_description">Small Gym Icon</string>
  <string name="sends_label">Sends</string>
  <string name="active_time_icon_description">Active Time Icon</string>
  <string name="hr">hr</string>
  <string name="min">min</string>
  <string name="sends">sends</string>
  <string name="init_date">Jan 1, 1970</string>
  <string name="discard_changes">Discard changes?</string>
  <string name="discard">discard</string>
</resources>
