<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group
    android:id="@+id/group_important"
    android:checkableBehavior="single">

    <item
      android:id="@+id/app_settings"
      android:icon="@drawable/ic_settings_black_24dp"
      android:title="@string/action_settings" />

    <item
      android:id="@+id/change_accounts"
      android:icon="@drawable/ic_exit_from_app_24px"
      android:title="@string/change_accounts" />

  </group>

  <group
    android:id="@+id/group_unimportant"
    android:checkableBehavior="single">

    <item
      android:id="@+id/send_feedback"
      android:icon="@drawable/ic_feedback_black_24dp"
      android:title="@string/send_feedback" />

    <item
      android:id="@+id/help"
      android:icon="@drawable/ic_help_black_24dp"
      android:title="@string/help" />

  </group>

</menu>
