<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.peter.climb.EditSessionActivity">

  <LinearLayout
    android:id="@+id/edit_session_layout"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:id="@+id/gym_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/small_gym_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/small_gym_icon_description"
        android:scaleType="centerCrop" />

      <Spinner
        android:id="@+id/gym_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/date_time_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="72dp"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:editable="false"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/init_date"
        tools:ignore="LabelFor,TextFields" />

      <EditText
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:editable="false"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/init_time"
        tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/active_time_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/active_time_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="bottom"
        android:background="@drawable/ic_timer_black_24dp"
        android:contentDescription="@string/active_time_icon_description" />

      <com.peter.climb.Views.RightAlignedHintEdit
        android:id="@+id/hours_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="48dp"
        android:padding="4dp"
        android:hint="@string/hr"
        app:editWidth="48dp" />

      <com.peter.climb.Views.RightAlignedHintEdit
        android:id="@+id/minutes_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        android:hint="@string/min"
        app:editWidth="48dp" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/sends_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/sends_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="bottom"
        android:background="@drawable/ic_terrain_black_24dp" />

      <com.peter.climb.Views.RightAlignedHintEdit
        android:id="@+id/sends_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:padding="4dp"
        android:hint="@string/sends"
        app:editWidth="56dp" />

    </LinearLayout>

    <View style="@style/Divider" />

  </LinearLayout>
</android.support.constraint.ConstraintLayout>
